--- a/_config.yml
+++ b/_config.yml
@@ -44,7 +44,7 @@ amazon_associate:
 
 # Your website URL (e.g. http://barryclark.github.io or http://www.barryclark.co)
 # Used for Sitemap.xml and your RSS feed
-url: https://github.com/nkon/nkon.github.io
+url: https://nkon.github.io
 
 # If you're hosting your site at a Project repository on GitHub pages
 # (http://yourusername.github.io/repository-name)
@@ -67,9 +67,9 @@ kramdown:
   input: GFM
   # Jekyll 3 and GitHub Pages now only support rouge for syntax highlighting
   syntax_highlighter: rouge
-  syntax_highlighter_opts:
-    # Use existing pygments syntax highlighting css
-    css_class: 'highlight'
+#  syntax_highlighter_opts:
+#    # Use existing pygments syntax highlighting css
+#    css_class: 'highlight'
 
 # Set the Sass partials directory, as we're using @imports
 sass:
