--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ footer-links:
   email:
   facebook:
   flickr:
-  github: nkon/nkon.github.io
+  github: nkon
   instagram:
   linkedin:
   pinterest:
@@ -67,9 +67,9 @@ kramdown:
   input: GFM
   # Jekyll 3 and GitHub Pages now only support rouge for syntax highlighting
   syntax_highlighter: rouge
-#  syntax_highlighter_opts:
-#    # Use existing pygments syntax highlighting css
-#    css_class: 'highlight'
+  syntax_highlighter_opts:
+    # Use existing pygments syntax highlighting css
+    css_class: 'highlight'
 
 # Set the Sass partials directory, as we're using @imports
 sass:
