--- a/_config.yml
+++ b/_config.yml
@@ -88,4 +88,8 @@ exclude:
   - README.md
   - CNAME
 
-theme: jekyll-theme-slate
+# theme: jekyll-theme-slate
+
+remote_theme: pages-themes/cayman@v0.2.0
+plugins:
+- jekyll-remote-theme # add this line to the plugins list if you already have one
